# fullstack-gpt-challenge

./: .gitIgnore
.devcontainer/: devcontainer.json
assignment06/: app.py  pyproject.toml
assignment06/.cache/embeddings/document.txt/: 1eec3543-c006-5861-8317-346c2fe1e281  4c0df729-23b1-5174-920b-f3b5e610004f  5839f1c8-1c14-5ff0-90ba-9e1f6d5e9945  df4bdae4-edad-5ee3-9360-ba1085be38d7
assignment09/: notebook.ipynb  pyproject.toml  research_xz_backdoor.txt
day01/: .gitIgnore  notebook.ipynb  pyproject.toml
day02/: notebook.ipynb  pyproject.toml
day03/: notebook.ipynb  pyproject.toml
day05/: notebook.ipynb  pyproject.toml
day05/.cache/: 0206af19-8bf3-5f8a-bea9-17594bbd0d35  0f2bbe18-8091-585e-b96b-965f2fa63293  1dc2277d-3aa9-5b13-a4a7-be447608e8c8  201a70c2-d04f-5188-89f6-0751c972a555  26ae33c7-6724-577a-9f8d-278eda93dfc6  2bcdb32b-fd70-5702-9db9-eeed0809efd4  3ede12c7-9f88-514f-b31d-7cff1d4bad5c  47c734d6-83fe-59f2-93f2-c1e959855fc3  4c0df729-23b1-5174-920b-f3b5e610004f  4d08894f-a670-5709-a530-5bd707841d4c  562b4596-2922-58d8-bc41-5b263d7f9cf9  5839f1c8-1c14-5ff0-90ba-9e1f6d5e9945  5c0f8465-81f6-5784-a3c3-254b9440cbf0  5ceb32dc-d885-57ce-8136-4b00288225cd  62e8d022-6be1-55fe-8b0a-7361c1b8d051  6a66ae58-38ad-569e-bfc5-f21d7e83becf  6c2242c4-3c87-5e85-be79-58fa4c77a515  867af3b4-857a-54a4-8d52-73807a52e785  95c0b74d-1f5c-5a47-8e0b-815dfd478832  98e17331-666f-5c2d-a663-059297ba149f  9b8102fa-a36b-5da4-bf2d-4ecbd5da3317  9df50cc3-5a5d-5f31-8135-26aec3548f3b  9eb99c34-3658-5b51-bc36-415471a790bc  ac2d09d1-8003-5029-a211-939133c86e44  d2c3620f-ff18-594b-9857-e9641d88185e  df4bdae4-edad-5ee3-9360-ba1085be38d7  eabea275-641f-5659-8ce2-7b84bbed0dd7
